Almost done with 2.0

--- a/Presentation/Bibliography.bib
+++ b/Presentation/Bibliography.bib
@@ -66,3 +66,12 @@
     year={2010},
     organization={IEEE}
 }
+
+@inproceedings{kmeans,
+  title={Object retrieval with large vocabularies and fast spatial matching},
+  author={Philbin, James and Chum, Ond{\v{r}}ej and Isard, Michael and Sivic, Josef and Zisserman, Andrew},
+  booktitle={Computer Vision and Pattern Recognition, 2007. CVPR'07. IEEE Conference on},
+  pages={1--8},
+  year={2007},
+  organization={IEEE}
+}
