--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -44,8 +44,8 @@
 % allowframebreaks not numbered
 \setbeamertemplate{frametitle continuation}[from second]
 
-\title[FAB-MAP]{FAB-MAP: Probabilistic Localization and Mapping in the Space of Appearance}
-\subtitle{Mark Cummins and Paul Newman (IJRR 2008)}
+\title[FAB-MAP]{Fast Appearance-Based Mapping (FAB-MAP)}
+\subtitle{Mark Cummins and Paul Newman\\ (IJRR 2008 and 2011)}
 \author{Sébastien Michaud}
 \institute{Laval University}
 \date{October 2015}
@@ -56,14 +56,15 @@
 \begin{frame}
     \titlepage
     \note[item]{Present yourself}
-    \note[item]{Present your supervisor}
-    \note[item]{FAB-MAP : 2008 International Journal of Robotics Research}
+    \note[item]{Present your supervisor, Phil and JF}
+    \note[item]{FAB-MAP : International Journal of Robotics Research}
+    \note[item]{Kind of a bad choice... too long, I am not a probabilistic geek}
+    \note[item]{Still interesting, I'll do my best !}
 \end{frame}
 
 \input{./tex/Introduction}
 \input{./tex/Fabmap1.tex}
 \input{./tex/Fabmap2.tex}
-\input{./tex/OpenFabmap.tex}
 \input{./tex/Conclusion}
 
 \begin{frame}[allowframebreaks]
