--- a/Presentation/tex/Introduction.tex
+++ b/Presentation/tex/Introduction.tex
@@ -18,7 +18,7 @@
 \end{frame}
 
 \subsection{FAB-MAP}
-\begin{frame}{Fast Appearance-Based Mapping (FAB-MAP)}
+\begin{frame}{FAB-MAP}
     \begin{quotation}
         This paper describes a \textbf{probabilistic approach} to the problem of \textbf{recognizing places} based on their \textbf{appearance}. The system we present is not limited to localization, but \textbf{can determine that a new observation comes from a previously unseen place}, and so augment its map. Effectively this is a \textbf{SLAM} system in the space of appearance.~\cite{fabmap2008b}
     \end{quotation}
