--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -22,8 +22,9 @@
 
 \usepackage{pgfpages}
 
-%\setbeameroption{show notes}
-%\setbeameroption{show notes on second screen=right}
+\setbeameroption{show notes}
+%\setbeameroption{show notes on second screen=left}
+\setbeameroption{show notes on second screen=right}
 
 \setbeamertemplate{navigation symbols}
 {%
@@ -55,11 +56,11 @@
 
 \begin{frame}
     \titlepage
+    \note[item]{Switch keyboard with script}
+    \note[item]{Open Mendeley and browser}
     \note[item]{Present yourself}
     \note[item]{Present your supervisor, Phil and JF}
     \note[item]{FAB-MAP : International Journal of Robotics Research}
-    \note[item]{Kind of a bad choice... too long, I am not a probabilistic geek}
-    \note[item]{Still interesting, I'll do my best !}
 \end{frame}
 
 \input{./tex/Introduction}
