--- a/Presentation/tex/Conclusion.tex
+++ b/Presentation/tex/Conclusion.tex
@@ -11,6 +11,7 @@
         \item Can change keypoints detector and descriptors (STAR worked best for them)
         \item OpenCV, ROS
     \end{itemize}
+    \note[item]{Section: Usage Note}
     \note[item]{Did my own test on Openfabmap...}
 \end{frame}
 
@@ -24,6 +25,7 @@
         \item Handle thousands of places in real time
         \item Detect enough loop closure for real applications, without false positives
     \end{itemize}
+    \note[item]{Section: Conclu Fabmap 1}
 \end{frame}
 
 \subsection{FAB-MAP 2.0}
@@ -36,4 +38,9 @@
         \item Can only use \textbf{single observation}
         \item Validated on a \textbf{1000 km dataset}
     \end{itemize}
+    \note[item]{Section: Conclu Fabmap 2}
+\end{frame}
+
+\begin{frame}{Questions ?}
+    \href{https://www.youtube.com/watch?v=GRTx5ovOSHo}{Video}
 \end{frame}
